Reordering of AMD readings, Java benchmark with Panama, README changes (#22)
* reverse order of pkg and core to get similar to pp0

* Cleaned up compile time funcs no longer needed

* Update README.md

* Call the C API on start and stop rapl

* impl AsRef for IntoIterator type

* work on java stuff lol

* start rapl works

* java panama works

* add java gitignore

* debug print and test bench now

* rename to bench.java

* use * on all foreign imports

* Delete rapl_lib.dll

* Update Bench.java

* Update README.md

* Update Bench.java

* Update Bench.java

* Update Bench.java

* Update Bench.java

* testing without arena

* reorder stuff

* Update Bench.java

* loop yo

* get loop count from param

* moved FibJava into FibSequence

* Added Java to runBench.sh (needs to be tested)

* Update Bench.java

* Moved RAPL calls also removed print

* fixed loop

* iterative fib from rosetta

* Added comments to Java bench

---------

Co-authored-by: Villiam <Vjacob19@student.aau.dk>